tests/baselines/reference/parserObjectCreationArrayLiteral4.errors.txt
==== tests/cases/compiler/parserObjectCreationArrayLiteral4.ts (1 errors) ====
    new Foo[1]();
        ~~~
!!! parserObjectCreationArrayLiteral4.ts(1,5): error TS2095: Cannot find name 'Foo'.